Horizontal scrollbar trouble fixed

--- a/src/components/ProductList/ProductList.css
+++ b/src/components/ProductList/ProductList.css
@@ -1,3 +1,18 @@
 .swiper-slide {
-    background-color: black;
+    display: flex;
+    align-items: center;
+    color: white;
+    background-color: #262A37;
+    width: 215px;
+    height: 100px;
+    border-radius: 20px;
+}
+
+.swiper-slide img {
+    padding: 0px;
+}
+
+.swiper-slide .content p {
+    text-align: center;
+    font-size: 14px;
 }
